# ai-vc

./: .gitignore  .pre-commit-config.yaml  .replit  Makefile  README.md  conversation-transcript.md  docker-compose.yml  mdocs.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  test_ic_sim.py
.github/workflows/: backend-tests.yml  check-adv.yml  ci-cd.yml  ci.yml  deploy-production.yml  deploy-staging.yml  frontend-tests.yml  lint.yml  security-scan.yml
apps/marketing/: next.config.js  package.json  postcss.config.js  tailwind.config.js
apps/portal/: package.json
apps/portal/components/: ErrorBoundary.tsx
attached_assets/: Pasted--Prompt-8-a-Catch-Up-Audit-0-8-System-You-are-the-QA-Lead-full-stack-engineer--1745114516451.txt
docs/: README.md  api_reference.md  architecture.md  development.md  dr_runbook.md  future_roadmap.md  knowledge_graph_metrics.md  observability.md  oncall.md  staging.md
docs/end-user/: faq.mdx  getting-started.mdx  portfolio-management.mdx
docs/legal/: privacy.md  terms.md
extensions/scout-chrome-extension/: background.js  manifest.json  note.html  note.js  popup.html  popup.js
grafana/: Dockerfile  grafana.ini
grafana/dashboards/: cost-quota-dashboard.json  cost_dashboard.json
infra/: init-db.sql
infra/alertmanager/: alertmanager.yml
infra/docker/: backend.Dockerfile  frontend.Dockerfile  python_service.Dockerfile  radar.Dockerfile  similarity_api.Dockerfile
infra/k8s/: blue-green-deployments.yaml  cert-manager.yaml  configmaps.yaml  deployments.yaml  green-deployments.yaml  ingress.yaml  namespaces.yaml  secrets.yaml  services.yaml
infra/prometheus/: prometheus.yml
infra/pulumi/: Pulumi.staging.yaml  Pulumi.yaml  __main__.py  deployments.py  eks.py  elasticache.py  grafana.py  rds.py  requirements.txt  s3.py  vpc.py
libs/: __init__.py
libs/common/: __init__.py  utils.py
libs/compliance/: README.md  __init__.py  accreditation.py  admin.py  audit.py  middleware.py  models.py  sanctions.py
libs/cost_guardrails/: __init__.py  gpu_metering.py  monitoring_api.py  rate_limiter.py  setup.py
libs/embeddings/: __init__.py  embeddings.py
libs/observability/: __init__.py  alerting.py  metrics.py  tracing.py
playwright/: 05-dataroom.spec.ts  08-negotiator.spec.ts
prometheus/: Dockerfile  prometheus.yml
prometheus/alerting/: Dockerfile  slack_notifier.py
prometheus/alertmanager/: Dockerfile  alertmanager.yml
prometheus/exporters/: Dockerfile  Dockerfile.aws  Dockerfile.openai  aws_cost_exporter.py  openai_usage_exporter.py  requirements.txt
prometheus/rules/: cost_alerts.yml
railway/: railway.json
reports/: deal_flow_radar_pipeline.ipynb
scripts/: seed_fixtures.py
services/api/: Dockerfile  flask_app.py  main.py  minimal_api.py  requirements.txt  simple_server.py  test_api.py
services/backend/: Dockerfile  main.py  requirements.txt
services/beta_feedback/: main.py  requirements.txt
services/billing/: main.py  middleware.py  models.py  repository.py  requirements.txt  stripe_service.py  subscription_service.py
services/compliance/: adv_generator.py
services/frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json  tailwind.config.js
services/graph_ingest/: Dockerfile  README.md  __init__.py  cli.py  main.py  requirements.txt  seed_demo.py
services/ic_sim/: main.py  requirements.txt
services/radar/: main.py  mlruns.db  requirements.txt
services/scheduler/: Dockerfile  __init__.py  api.py  celery_app.py  crontab.yml  main.py  requirements.txt  scheduler.py  tasks.py
services/similarity_api/: README.md  __init__.py  cli.py  main.py  requirements.txt  test_embeddings.py
services/telemetry/: .env.example  main.py  requirements.txt  run.py
services/term_sheet/: README.md  main.py  requirements.txt  test_term_sheet.py
services/upload/: Dockerfile  requirements.txt
services/value_add_agents/: Dockerfile  README.md  __init__.py  base_agent.py  config.py  main.py  requirements.txt  simulate.py
services/worker/: Dockerfile  worker.py
tests/: test_compliance.py  test_compliance_integration.py  test_k8s_services.py  test_rate_limiter.py
(+276 files in other folders)
