[tool.poetry]
name = "polyglot-monorepo"
version = "0.1.0"
description = "A polyglot monorepo with Python backend services, TypeScript/Next.js frontend, and containerized infrastructure"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "W", "I"]
ignore = []
