[tool.poetry]
name = "polyglot-monorepo"
version = "0.1.0"
description = "A polyglot monorepo with Python backend services, TypeScript/Next.js frontend, and containerized infrastructure"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
httpx = "^0.28.0"
trafilatura = "^2.0.0"
flower = "^2.0.1"
prometheus-client = "^0.21.1"
pyyaml = "^6.0.2"
croniter = "^6.0.0"
celery = "^5.5.1"
redis = "^5.2.1"
pydantic = "^2.11.3"
sentence-transformers = "^4.1.0"
qdrant-client = "^1.13.3"
huggingface-hub = "^0.30.2"
pytest = "^8.3.5"
numpy = "^2.2.4"
markdown = "^3.8"
openai = "^1.75.0"
minio = "^7.2.15"
requests = "^2.32.3"
slack-sdk = "^3.35.0"
docxtpl = "^0.19.1"
python-docx = "^1.1.2"
websockets = "^15.0.1"
sendgrid = "^6.11.0"
aiokafka = "^0.12.0"
confluent-kafka = "^2.10.0"
pytest-asyncio = "^0.26.0"
mlflow = "^2.21.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^23.9.1"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = []
